--- a/cfg/firefox/chrome/userChrome.css
+++ b/cfg/firefox/chrome/userChrome.css
@@ -33,6 +33,7 @@ by Miguel Avila
 .urlbarView {
 /*   display: none !important; */
   background-color: var(--sfwindow) !important;
+  border-radius: 20px !important;
 }
 
 /*─────────────────────────────*/
@@ -161,13 +162,13 @@ toolbarbutton.bookmark-item:not(.subviewbutton) {
 
 /* Toolbar  */
 #tracking-protection-icon-container,
-#urlbar-zoom-button,
+/* #urlbar-zoom-button, */
 #pageActionButton,
 #pageActionSeparator,
 #tabs-newtab-button,
 /* #back-button, */
 #save-to-pocket-button,
-#PanelUI-button,
+#fxa-toolbar-menu-button,
 #forward-button,
 .tab-secondary-label {
   display: none !important;
@@ -179,12 +180,23 @@ toolbarbutton.bookmark-item:not(.subviewbutton) {
 
 /* CUSTOMS */
 
+
+#PanelUI-button {
+/*   color  */
+  opacity: 0% !important;
+}
+
 #star-button-box {
   fill: none;
 }
 
+#search-one-offs:not([hidden]) {
+  display: none !important;
+}
+
 #urlbar-input-container {
  border: 1px solid #ffffff !important;
+ border-radius: 30px !important;
 }
 
 /*  */
